<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_progress"
        android:title="@string/navigation_home"
        android:icon="@drawable/icon_navigation_progress" />

    <item
        android:id="@+id/navigation_insights"
        android:title="@string/navigation_insights"
        android:icon="@drawable/icon_navigation_insights" />

    <item
        android:id="@+id/navigation_inspire_feed"
        android:title="@string/inspire_feed"
        android:icon="@drawable/icon_inspire_feed"
        android:visible="false"/>

    <item
        android:id="@+id/navigation_view_survey_responses"
        android:title="@string/navigation_surveys"
        android:icon="@drawable/icon_navigation_history" />
</menu>
