...
    <string name="launch_view_surveys">Your wellbeing log</string>
    <string name="launch_view_activity">View activities</string>
    <string name="launch_create_activity">Record activity</string>
    <string name="launch_answer_survey">Complete log</string>
    <string name="wellbeing_logs_title">Wellbeing logs</string>
    <string name="learn_more_title">Learn more</string>
    <string name="view_more">View more</string>
    <string name="wellbeing_graph_title">Your ways to wellbeing</string>
    <string name="wellbeing_insights_graph">Daily ways to wellbeing</string>
    <string name="activity_search_hint">Search for activity</string>
    <string name="create_non_existent_button">Create new</string>

    <string name="log_your_day_title">Keep track of your day</string>
    <string name="log_your_day_description">Record the activities you have done throughout the day, then complete your daily wellbeing log to check in on how things are going.</string>

...
    <string name="missed_days_title">Recover missed days</string>

    <string name="submit_button">Submit</string>
    <string name="navigation_home">Progress</string>
    <string name="navigation_surveys">History</string>
    <string name="navigation_activities">Activities</string>
    <string name="navigation_insights">Insights</string>
    <string name="activity_schedule">Schedules</string>
    <string name="schedule_instance">Schedule</string>

    <string name="wellbeing_insight_prefix">Times achieved:</string>
    <string name="wellbeing_insight_activities">View your activities</string>
    <string name="wellbeing_insight_activities_description">Find a list of all the activities you have completed</string>

    <string name="title_weekly_insights_overview">Weekly insights</string>
    <string name="description_weekly_insights_overview">Here\'s how you\'ve done in the last 7 days</string>

    <string name="wellbeing_connect">Connect</string>
    <string name="wellbeing_be_active">Be active</string>
    <string name="wellbeing_take_notice">Take notice</string>
    <string name="wellbeing_keep_learning">Keep learning</string>
    <string name="wellbeing_give">Give</string>
    <string name="wellbeing_unassigned">None</string>
    <string name="days_active">Days logged</string>
    <string name="five_ways_to_wellbeing">Five ways to wellbeing</string>
    <string name="five_ways_to_wellbeing_description">The five ways to wellbeing provide areas of focus that help you maintain positive mental wellbeing. Think of it as your five a day for your mental wellbeing!</string>

    <string name="wellbeing_connect_description">Connect is all about building relationships, in person or over video call it all counts, what really matters is that you spend time getting to know each other deeply, build a sense of trust, go deeper than the superficial, and most importantly make time to listen.</string>
    <string name="wellbeing_be_active_description">Be active is all about getting in some exercise, whether that be grabbing your yoga mat and taking on the downward dog, going for a short walk during your lunch break or training for your next marathon, make sure to keep it at a level you are comfortable with, if you don\'t feel better, change it up until you find something you love.</string>
    <string name="wellbeing_take_notice_description">Take notice is all about taking the time to reflect, look at the bigger picture, how was your day today? Make the most of the little things, put that phone down, stop scrolling. Ah, that\'s better, now you can enjoy the moment.</string>
...
    <string name="suggestions_best_activity">Most frequent:</string>
    <string name="suggestions_worst_activity">Suggested activity:</string>
    <string name="suggestions_improve_description">Doing this more regularly will help to boost your daily</string>
    <string name="suggestions_score">score</string>
    <string name="suggestions_best">You are doing best at</string>
    <string name="suggestions_favourite">Favourite activity:</string>
    <string name="suggestions_positive_description">You did this regularly over the last week - keep it up!</string>

    <string name="connect_suggestion">Get in touch with a friend</string>
    <string name="be_active_suggestion">Find a new way to exercise</string>
    <string name="keep_learning_suggestion">Take up a new hobby</string>
    <string name="take_notice_suggestion">Start a journal</string>
    <string name="give_suggestion">Lend a helping hand</string>
...
